@startuml Nisse plants model
namespace Nisse.Plants {
  class Plant {
    +string name
    +date acquired_on
  }

  class PlantSpecies {
    +string name
    +string commonName
    +string careInstructions
  }

  Plant "+plants *" *-- PlantSpecies : Belongs to >

  PlantSpecies "+species 0..*" o--> "+event_type 0..*" PlantEventType
  (PlantSpecies, PlantEventType) .. CareScheduleEntry

  class CareScheduleEntry {
    +int interval
  }

  CareScheduleEntry "*" *--> "+type 1" IntervalType

  Enum IntervalType {
    DAYS
    WEEKS
    MONTHS
  }

  class CareNote {
    +string body
  }

  Plant "+plant 1" *-- "+notes *" CareNote

  class Room {
    +string label
  }

  Enum LightDirection {
    N
    NE
    E
    SE
    S
    SW
    W
    NW
  }

  Enum LightLevel {
    LOW
    MEDIUM
    HIGH
  }

  Enum Temperature {
    LOW
    MEDIUM
    HIGH
  }

  class Spot {
    +string label
  }

  Spot "*" *--> "+lightLevel 1" LightLevel
  Spot "*" *--> "+lightDirection 1" LightDirection
  Spot "*" *--> "+temperature 1" Temperature

  Room "+room 1" o-- "+spots *" Spot : Has >

  Plant "+plants *" *-- "+spot 1" Spot : Is in >

  class PlantEvent {
    +string note
    +utc_datetime inserted_at
  }

  enum PlantEventType {
    WATER
    SPRAY
    WIPE
    WATER_TANK
    POT
    TRIM
    FERTILIZE
    MOVE
    NOTE
  }

  PlantEvent "*" *--> "+type 1" PlantEventType

  PlantEvent "+events *" *-- "+subject 1" Plant

  class Pot {
    +string label
  }

  Pot "*" *--> "+type 1" PotType
  Plant "+pot 1" *--> "+plant 1" Pot

  enum PotType {
    NORMAL
    SELF_WATERING
  }
}
@enduml
